proseguimento replica sito

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,6 @@ header{
 
 .cards{
     width: 80vw;
-    height: 100px;
     margin: 0 auto;
     display: flex;
     justify-content: space-around;
@@ -172,9 +171,11 @@ header{
 
 .cards .card{
     width: 30%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 .card p{
     font-size: 20px;
@@ -189,7 +190,7 @@ header{
 }
 .card ul li{
     font-size: 18px;
-    padding: 15px 0;
+    padding: 10px 0;
     color: #95959e;
 }
 .card ul li:before {
@@ -197,4 +198,45 @@ header{
   padding-right: 10px;
   font-weight: bold;
   color: #3892ed;
+}
+
+.dropdown sup{
+    font-size: 14px;
+    font-weight: 800;
+    padding-left: 3px;
+    text-transform: uppercase;
+    color: #eb008d;
+}
+
+sup, sub{
+    font-size: 50px;
+}
+
+.scelta-piano{
+    width: 80vw;
+    margin: 40px auto;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.scelta-piano .scelta{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.scelta a{
+    border-radius: 50px;
+    border-color: #eb008d;
+    background-color: #eb008d;
+    padding: 20px 50px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    color: #ffffff;
+}
+
+.scelta p{
+    color: #eb008d;
 }
