--- a/css/style.css
+++ b/css/style.css
@@ -213,15 +213,16 @@ sup, sub{
 }
 
 .scelta-piano{
-    width: 80vw;
+    width: 100vw;
     margin: 40px auto;
-    display: flex;
-    justify-content: space-around;
+    padding-left: 150px;
+    display: inline-block;
 
 }
 
 .scelta-piano .scelta{
     width: 30%;
+    float: left;
     display: flex;
     flex-direction: column;
     align-items: center;
